# biobots

./: .typos.toml  Cargo.toml  README.md  biobots-e9d901f7d2168d06.js  biobots-e9d901f7d2168d06_bg.wasm  index.html
.github/workflows/: pages.yml  rust.yml
assets/: manifest.json  sw.js
src/: app.rs  bot.rs  consts.rs  draw.rs  geom.rs  images.rs  lib.rs  main.rs
